Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22529

xcodebuild fails when building to iOS device

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 4.10.0-beta2
    • Qt Creator 4.10.0-beta1
    • iOS Support
    • macOS10.14
      iOS 12.2
      xcode 10.2.1
    • iOS/tvOS/watchOS
    • 9a2bc34776f54ab4b32a7618de4707a8a9b630ac

    Description

      Install 5.13.0 RC iOS binaries, launch Creator.

      Open any of the examples and build. Build output says 'xcode build fails'.

      When launching the .xcodeproject file (created by Creator) in xcode and build, there is errors about singing:

      Code Signing Error: Provisioning profile "iOS Team Provisioning Profile: *" is Xcode managed, but signing settings require a manually managed profile.Code Signing Error: Code signing is required for product type 'Application' in SDK 'iOS 12.2'
      

      Simulator build works and deploys correctly.

      Does not reproduce on released QtCreator 4.9.1, fails with QtC 4.10.0 beta1.

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              con Eike Ziller
              joaijala Johanna Äijälä
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes