Fix wrong default value for "Automatically manage signing"

In iOS build configurations.
When setting the default value after creating the "BoolAspect", also the
value must be changed to that default.
The original code only used the default value when restoring the aspect
from settings.

Task-number: QTCREATORBUG-22529
Change-Id: Icee0887e02d2b6d83273492a45f20c0263bb68cc
Reviewed-by: Vikas Pachdha <vikas.pachdha@qt.io>
Reviewed-by: hjk <hjk@qt.io>